# Nakama

./: .env  .gitignore  DELIVERABLES.md  FAILED_CONVERSATION_TROUBLESHOOTING.md  FEATURES_README.md  IMPLEMENTATION_SUMMARY.md  IN_MEMORY_INDEXING_PATTERNS.md  LONG_TERM_MEMORY.md  OLLAMA_WINDOWS_PORT_TROUBLESHOOTING.md  QUICK_REFERENCE.md  RAG_IMPLEMENTATION.md  README.md  index  index.html  package.json  pnpm-lock.yaml  stash.env.example  tailwind.config.js  tauri_dev_log.txt  vite.config.ts
.github/: copilot-instructions.md
.kilo/plans/: 1779907037854-lucky-panda.md
recordings/: output_20250805_104042.txt  output_20250812_231926.txt
scripts/: dev-setup.cjs  dev-setup.js  dev.bat  dev.ps1  setup-dev.bat  setup-dev.ps1  setup-dev.sh  setup-simple.js  validate_memory_integration.sh
src/: App.tsx  ChatGPTInterface.tsx  style.css
src-tauri/: Cargo.toml  cargo_check2.txt  cargo_check3.txt  cargo_check4.txt  cargo_check5.txt  cargo_check6.txt  cargo_check_log.txt  key_log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_companion.rs  command.rs  config.rs  conversation.rs  input_controller.rs  lib.rs  local_memory.rs  main.rs  memory.rs  memory_agent.rs  model_manager.rs  models.rs  rag_indexer.rs  recorder.rs  voice_listener.rs
src-tauri/src/commands/: ai.rs  computer_use.rs  conversation.rs  execute_ai_with_actions.rs  fetch_files.rs  memory.rs  mod.rs  mouse.rs  rag.rs  recording.rs  screen.rs
src-tauri/tests/: rag_integration.rs
src/components/: AutomationControlPanel.tsx  ChatContainer.tsx  ChatHeader.tsx  ConversationList.tsx  FileLinker.tsx  FileListElement.tsx  FileLister.tsx  FileStager.tsx  Header.tsx  IndexManager.tsx  MemoryPanel.tsx  MessageInput.tsx  MessageList.tsx  NightSky.tsx  RecordingControls.tsx  ScreenVisionPanel.tsx  SidePanel.tsx  VoiceControls.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Spinner.tsx  Tabs.tsx  Toast.tsx  Toggle.tsx
src/contexts/: ToastContext.tsx
src/hooks/: useAIChatStream.ts  useFileIndexer.ts  useFocusTrap.ts  useMemoryRecall.ts  useStashStatus.ts
src/types/: index.ts
