[package]
name = "nakama"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "nakama_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8.10"
rdev = "0.5"
nix = "0.26.2"
crossbeam-channel = "0.5.6"
chrono = "0.4.20"
tauri-plugin-mic-recorder = "2.0.0"
alsa = "0.9.1"
bytemuck = "1.15.0"
candle-core = "=0.9.2"
enigo = "0.5.0"
hf-hub = { version = "0.4.3", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.20"
ollama-rs = { version = "0.3.3", features = ["stream"] }
tokio-stream = "0.1"
tauri-plugin-dialog = "2"
