[package]
name = "nakama"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "nakama_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenv = "0.15"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8.10"
rdev = "0.5"
nix = "0.26.2"
crossbeam-channel = "0.5.6"
chrono = { version = "0.4.20", features = ["serde"] }
tauri-plugin-mic-recorder = "2.0.0"
bytemuck = "1.15.0"
candle-core = "=0.9.2"
enigo = "0.5.0"
image = "0.24.7"
base64 = "0.22.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
once_cell = "1.20"
tokio-stream = "0.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
rand = "0.8"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

[features]
default = []
